# cuped_comprehensive_guide

./: analyzer.py  calculators.py  cuped_guide.ipynb  fake_data.csv  pyproject.toml  test_RCT_analyser.ipynb
RCT_analyser/: analyzer.py  estimators.py
