[tool.poetry]
name = "cuped-comprehensive-guide"
version = "0.1.0"
description = ""
authors = ["David Chung <davidaristotle2012@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
scipy = "^1.15.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
